# ai-memory

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
crates/ai-memory-cli/: Cargo.toml
crates/ai-memory-cli/src/: auth.rs  cli.rs  config.rs  http_client.rs  main.rs
crates/ai-memory-cli/src/commands/: apply_shared.rs  bootstrap.rs  embed.rs  forget_sweep.rs  install_hooks.rs  install_instructions.rs  install_mcp.rs  mod.rs  render_shared.rs  serve.rs  setup_agent.rs
crates/ai-memory-consolidate/src/: bootstrap.rs  consolidator.rs  lib.rs  lint.rs  types.rs
crates/ai-memory-core/src/: active_project.rs  actor.rs  ids.rs  lib.rs  page.rs  routing_snippet.rs
crates/ai-memory-hooks/src/: payload.rs  router.rs
crates/ai-memory-llm/src/: openai_oauth.rs
crates/ai-memory-mcp/src/: admin.rs  server.rs
crates/ai-memory-mcp/tests/: admin_backup.rs  admin_bootstrap.rs  admin_move.rs  admin_phase3.rs  admin_purge.rs  admin_rename.rs  admin_status_search.rs  admin_write_page.rs  autoscope_stress.rs
crates/ai-memory-store/: Cargo.toml
crates/ai-memory-store/migrations/: V01__init.sql  V07__agent_kind_omp.sql
crates/ai-memory-store/src/: error.rs  fts_query.rs  lib.rs  migrations.rs  ops.rs  reader.rs  writer.rs
crates/ai-memory-web/src/: lib.rs
crates/ai-memory-web/src/routes/: api.rs  mod.rs  statics.rs
crates/ai-memory-web/templates/: base.html
crates/ai-memory-wiki/src/: markdown.rs  wiki.rs
docs/: ARCHITECTURE.md  design-decisions.md  install.md  marker-file.md  mcp-install.md  prior-art-implementation-findings.md  v0.3-roadmap.md
hooks/: _lib.sh
hooks/claude-code/: post-tool-use.sh  pre-compact.sh  pre-tool-use.sh  session-end.sh  session-start.sh  stop.sh  user-prompt-submit.sh
hooks/lib/: ai-memory-hook.ps1
scripts/: install-hooks.sh
tests/hooks/: test_lib.sh
