[workspace]
resolver = "3"
members = [
    "crates/ai-memory-core",
    "crates/ai-memory-store",
    "crates/ai-memory-wiki",
    "crates/ai-memory-mcp",
    "crates/ai-memory-hooks",
    "crates/ai-memory-llm",
    "crates/ai-memory-consolidate",
    "crates/ai-memory-web",
    "crates/ai-memory-cli",
    # Live A/B harness — not part of the shipped binary, but in
    # the workspace so it shares deps + builds with the rest.
    "evals",
]

[workspace.package]
version = "0.7.1"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/akitaonrails/ai-memory"
authors = ["Fabio Akita <boss@akitaonrails.com>"]

[workspace.dependencies]
# Inter-crate dependencies.
ai-memory-core = { path = "crates/ai-memory-core", version = "0.7.1" }
ai-memory-store = { path = "crates/ai-memory-store", version = "0.7.1" }
ai-memory-wiki = { path = "crates/ai-memory-wiki", version = "0.7.1" }
ai-memory-mcp = { path = "crates/ai-memory-mcp", version = "0.7.1" }
ai-memory-hooks = { path = "crates/ai-memory-hooks", version = "0.7.1" }
ai-memory-llm = { path = "crates/ai-memory-llm", version = "0.7.1" }
ai-memory-consolidate = { path = "crates/ai-memory-consolidate", version = "0.7.1" }
ai-memory-web = { path = "crates/ai-memory-web", version = "0.7.1" }

# (Workspace shared deps follow below)

# Error handling.
anyhow = "1"
thiserror = "2"

# Serialization.
serde = { version = "1", features = ["derive"] }
# `preserve_order` keeps existing JSON key order intact when we
# round-trip user config files via `install-mcp --apply`. Without it,
# `~/.claude.json` (which has dozens of CC-managed keys) would be
# alphabetised on every write — semantically equivalent but a giant
# cosmetic diff the user didn't ask for.
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"

# Async runtime.
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt", "io"] }

# Logging / tracing.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

# Time & IDs.
jiff = { version = "0.2", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v5", "v7", "serde"] }

# Config & CLI.
figment = { version = "0.10", features = ["toml", "env"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
# Format-preserving TOML editor for install-mcp --apply against
# Codex's config.toml. Plain `toml` round-trips destroy comments;
# `toml_edit` doesn't.
toml_edit = "0.22"

# Secrets + constant-time / RNG primitives for bearer-token auth.
secrecy = { version = "0.10", features = ["serde"] }
subtle = "2"
getrandom = "0.3"
base64 = "0.22"

# Storage.
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
refinery = { version = "0.8", features = ["rusqlite"] }
sha2 = "0.10"
parking_lot = "0.12"

# Filesystem watcher + process inspection.
notify = "8"
notify-debouncer-full = "0.6"
sysinfo = "0.32"

# Windows NTFS file-index (inode equivalent) for own-write detection.
winapi-util = "0.1"

# MCP server SDK.
rmcp = { version = "1.7", features = ["server", "macros", "transport-io", "transport-streamable-http-server", "schemars"] }
schemars = "1"
axum = "0.8"
# Direct dep so tests can use `Router::oneshot` via `ServiceExt`.
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Backup / restore archive format.
tar = "0.4"
flate2 = "1"

# Text munging / hook payload sanitisation.
regex = "1"

# Wiki git versioning.
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }

# LLM provider HTTP.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"

# Testing.
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# Pedantic is opt-in per-crate once code stabilises; too noisy for early skeleton.

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true
