[package]
name = "ai-memory-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "SQLite storage layer with single-writer actor and FTS5/sqlite-vec indices."

[dependencies]
ai-memory-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
jiff.workspace = true
uuid.workspace = true
sha2.workspace = true
rusqlite.workspace = true
refinery.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
